crates/tether-adapter-shellhook/tests/snapshots/snapshot_tests__cline_post_tool.snap
---
source: crates/tether-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 317
expression: "json!({\n    \"session_id\": event.session_id, \"event_type\":\n    format!(\"{:?}\", event.event_type), \"tool_name\": event.tool_name,\n})"
---
event_type: PostToolUse
session_id: cline-sess
tool_name: Read
