crates/tether-adapter-shellhook/tests/snapshots/snapshot_tests__cline_pre_tool.snap
---
source: crates/tether-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 300
expression: "json!({\n    \"session_id\": event.session_id, \"event_type\":\n    format!(\"{:?}\", event.event_type), \"tool_name\": event.tool_name,\n    \"tool_input\": event.tool_input,\n})"
---
event_type: PreToolUse
session_id: cline-sess
tool_input:
  command: whoami
tool_name: Bash
