crates/tether-adapter-shellhook/tests/snapshots/snapshot_tests__cline_resp_allow.snap
---
source: crates/tether-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 328
expression: "json!({\"body\": json, \"exit_code\": code})"
---
body:
  cancel: false
exit_code: 0
