crates/tether-adapter-shellhook/tests/snapshots/snapshot_tests__cline_resp_mutate.snap
---
source: crates/tether-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 356
expression: "json!({\"body\": json, \"exit_code\": code})"
---
body:
  cancel: false
  contextModification:
    updatedInput:
      command: echo safe
exit_code: 0
