crates/tether-adapter-shellhook/tests/snapshots/snapshot_tests__codex_pre_tool_use.snap
---
source: crates/tether-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 139
expression: "json!({\n    \"session_id\": event.session_id, \"event_type\":\n    format!(\"{:?}\", event.event_type), \"tool_name\": event.tool_name,\n    \"tool_input\": event.tool_input,\n})"
---
event_type: PreToolUse
session_id: codex-sess
tool_input:
  patch: diff --git a/foo
tool_name: apply_patch
