crates/tether-adapter-shellhook/tests/snapshots/snapshot_tests__codex_resp_block.snap
---
source: crates/tether-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 163
expression: "json!({\"body\": json, \"exit_code\": code})"
---
body:
  error: blocked by policy
exit_code: 2
