crates/tether-adapter-shellhook/tests/snapshots/snapshot_tests__codex_resp_context_downgraded.snap
---
source: crates/tether-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 154
expression: "json!({\"body\": json, \"exit_code\": code})"
---
body:
  hookSpecificOutput:
    permissionDecision: allow
exit_code: 0
