crates/tether-adapter-shellhook/tests/snapshots/snapshot_tests__crush_resp_allow.snap
---
source: crates/tether-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 265
expression: "json!({\"body\": json, \"exit_code\": code})"
---
body:
  decision: allow
exit_code: 0
